test(booking): add getUpcomingBookings success test